chore: new changes

--- a/public/contact.html
+++ b/public/contact.html
@@ -407,8 +407,7 @@
         type="hidden"
         name="redirect-url"
         value="https://traumatemcura.com.br/eventos/buscar/treinamentos-de-se"
-      />
-      <input type="hidden" name="cmp4" value="Landing Page Campanha" /><input
+      /><input type="hidden" name="cmp4" value="Landing Page Campanha" /><input
         type="hidden"
         name="email-alert"
         value="on"
@@ -475,104 +474,23 @@
           </div>
         </div>
         <div class="block">
-          <div class="vertical divlabel"><label>Formação</label></div>
+          <div class="vertical divlabel"><label>Mensagem</label></div>
           <div class="vertical divinput">
-            <input
-              type="text"
+            <textarea
+              id="w3review"
               name="cmp6"
-              placeholder=""
-              format=""
+              rows="4"
               class="type_VC"
-              maxlength="80"
-            />
-          </div>
-        </div>
-        <div class="block">
-          <div class="vertical divlabel"><label>Cidade</label></div>
-          <div class="vertical divinput">
-            <input
-              type="text"
-              name="cmp7"
-              placeholder=""
-              format=""
-              class="type_VC field-required"
-              maxlength="80"
-            />
-          </div>
-        </div>
-        <div class="block">
-          <div class="vertical divlabel"><label>UF</label></div>
-          <div class="vertical divinput">
-            <select name="cmp8" class="type_LVU field-required">
-              <option value="">Selecione</option>
-              <option value="AC">AC</option>
-              <option value="AL">AL</option>
-              <option value="AM">AM</option>
-              <option value="AP">AP</option>
-              <option value="BA">BA</option>
-              <option value="CE">CE</option>
-              <option value="DF">DF</option>
-              <option value="ES">ES</option>
-              <option value="GO">GO</option>
-              <option value="MA">MA</option>
-              <option value="MG">MG</option>
-              <option value="MS">MS</option>
-              <option value="MT">MT</option>
-              <option value="PA">PA</option>
-              <option value="PB">PB</option>
-              <option value="PE">PE</option>
-              <option value="PI">PI</option>
-              <option value="PR">PR</option>
-              <option value="RJ">RJ</option>
-              <option value="RN">RN</option>
-              <option value="RO">RO</option>
-              <option value="RR">RR</option>
-              <option value="RS">RS</option>
-              <option value="SC">SC</option>
-              <option value="SE">SE</option>
-              <option value="SP">SP</option>
-              <option value="TO">TO</option>
-            </select>
-          </div>
-        </div>
-        <div class="block">
-          <div class="vertical divlabel">
-            <label>Política de Privacidade</label>
-          </div>
-          <div class="vertical divinput">
-            <div
-              class="containerMultiple containerMultiple_cmp9"
-              style="max-height: 100%"
-            >
-              <select
-                multiple="multiple"
-                hd-name="cmp9"
-                class="invi-select type_LVM"
-              ></select>
-              <div>
-                <label
-                  ><input
-                    type="checkbox"
-                    class="chk_cmp9"
-                    value="Aceito o envio de informações"
-                  />
-                  Aceito o envio de informações</label
-                >
-              </div>
-              <input type="hidden" name="cmp9" /><input
-                type="hidden"
-                name="cmp9_action"
-                value="replacement"
-              />
-            </div>
+              maxlength="240"
+            ></textarea>
           </div>
         </div>
         <div class="block">
           <div class="vertical class1 submit submit-button-td">
             <input
               type="submit"
-              value="Cadastre-se"
-              original-value="Cadastre-se"
+              value="Enviar"
+              original-value="Enviar"
               class="dinSubmit"
             />
             <div class="spinner">
